insertpublish and schedulepublish page done

--- a/authentication/changepass.html
+++ b/authentication/changepass.html
@@ -16,7 +16,7 @@
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="../assets/css/back-top/back.css" />
     <!-- MAHFIL CSS -->
-    <link rel="stylesheet" href="../assets/css/style.min.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
   </head>
   <body>
     <!-- HEADER SECTION START -->
