--- a/authentication/changepassword.html
+++ b/authentication/changepassword.html
@@ -14,7 +14,7 @@
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="../assets/css/bootstrap/bootstrap.min.css" />
     <!-- MAHFIL CSS -->
-    <link rel="stylesheet" href="../assets/css/style.min.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
   </head>
   <body>
     <!-- AUTHENTICATION START -->
